execute_process(
     COMMAND /usr/bin/python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen.py --grpc_plugin "${_GRPC_CPP_PLUGIN_EXECUTABLE}" --build_folder "${CMAKE_CURRENT_BINARY_DIR}"
)

file(GLOB SOURCES_PROTO ${CMAKE_CURRENT_BINARY_DIR}/*.h ${CMAKE_CURRENT_BINARY_DIR}/*.cc)
SET(LIB_NAME proto)
ADD_LIBRARY(${LIB_NAME} STATIC ${SOURCES_PROTO})
set_target_properties(${LIB_NAME} PROPERTIES LINKER_LANGUAGE CXX)
